--- a/.eslintrc
+++ b/.eslintrc
@@ -4,13 +4,18 @@
 	"extends": "@ljharb",
 
 	"rules": {
-		"func-style": [2, "declaration"],
-		"id-length": 0,
-		"multiline-comment-style": 0,
-		"new-cap": [2, {
-			"capIsNewExceptions": [
-				"GetIntrinsic",
-			],
-		}],
+		"func-name-matching": 0,
+		"indent": [2, 4],
+		"no-new-func": [1],
 	},
+
+	"overrides": [
+		{
+			"files": "test/**",
+			"rules": {
+				"max-lines-per-function": 0,
+				"strict": [0]
+			},
+		},
+	],
 }
