--- a/package.json
+++ b/package.json
@@ -1,45 +1,42 @@
 {
-  "name": "depd",
-  "description": "Deprecate all the things",
-  "version": "2.0.0",
-  "author": "Douglas Christopher Wilson <doug@somethingdoug.com>",
+  "name": "bytes",
+  "description": "Utility to parse a string bytes to bytes and vice-versa",
+  "version": "3.1.2",
+  "author": "TJ Holowaychuk <tj@vision-media.ca> (http://tjholowaychuk.com)",
+  "contributors": [
+    "Jed Watson <jed.watson@me.com>",
+    "Théo FIDRY <theo.fidry@gmail.com>"
+  ],
   "license": "MIT",
   "keywords": [
-    "deprecate",
-    "deprecated"
+    "byte",
+    "bytes",
+    "utility",
+    "parse",
+    "parser",
+    "convert",
+    "converter"
   ],
-  "repository": "dougwilson/nodejs-depd",
-  "browser": "lib/browser/index.js",
+  "repository": "visionmedia/bytes.js",
   "devDependencies": {
-    "benchmark": "2.1.4",
-    "beautify-benchmark": "0.2.4",
-    "eslint": "5.7.0",
-    "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-markdown": "1.0.0-beta.7",
-    "eslint-plugin-node": "7.0.1",
-    "eslint-plugin-promise": "4.0.1",
-    "eslint-plugin-standard": "4.0.0",
-    "istanbul": "0.4.5",
-    "mocha": "5.2.0",
-    "safe-buffer": "5.1.2",
-    "uid-safe": "2.1.5"
+    "eslint": "7.32.0",
+    "eslint-plugin-markdown": "2.2.1",
+    "mocha": "9.2.0",
+    "nyc": "15.1.0"
   },
   "files": [
-    "lib/",
     "History.md",
     "LICENSE",
-    "index.js",
-    "Readme.md"
+    "Readme.md",
+    "index.js"
   ],
   "engines": {
     "node": ">= 0.8"
   },
   "scripts": {
-    "bench": "node benchmark/index.js",
-    "lint": "eslint --plugin markdown --ext js,md .",
-    "test": "mocha --reporter spec --bail test/",
-    "test-ci": "istanbul cover --print=none node_modules/mocha/bin/_mocha -- --reporter spec test/ && istanbul report lcovonly text-summary",
-    "test-cov": "istanbul cover --print=none node_modules/mocha/bin/_mocha -- --reporter dot test/ && istanbul report lcov text-summary"
+    "lint": "eslint .",
+    "test": "mocha --check-leaks --reporter spec",
+    "test-ci": "nyc --reporter=lcov --reporter=text npm test",
+    "test-cov": "nyc --reporter=html --reporter=text npm test"
   }
 }
