--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "@ljharb/tsconfig",
 	"compilerOptions": {
-		"target": "ES2021",
+		"target": "es2021",
 	},
 	"exclude": [
 		"coverage",
